# rmeta-core

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
rmeta_core/handlers/: __init__.py  docx_handler.py  heic_handler.py  image_handler.py  pdf_handler.py  text_csv_handler.py  xlsx_handler.py
rmeta_core/postprocessors/: gpg_encryptor.py  hash_generator.py
rmeta_core/utils/: chunking.py  cleanup.py  pii_scanner.py  system.py  watchdog.py
tests/: conftest.py  test_chunking.py  test_cleanup.py  test_docx_handler.py  test_gpg_encryptor.py  test_handlers_registry.py  test_hash_generator.py  test_heic_handler.py  test_image_handler.py  test_pdf_handler.py  test_pii_scanner.py  test_text_csv_handler.py  test_xlsx_handler.py
