[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rmeta-core"
version = "0.1.0"
description = "Shared file-handler, postprocessor, and session-cleanup logic behind rMeta and rMetaCLI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pypdf>=3.9.0",
    "pdfplumber>=0.11.0",
    "pdfminer.six>=20240000",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.0",
    "pillow>=11.0.0",
    "pillow_heif>=1.1.0",
    "piexif>=1.1.3",
    "pyheif>=0.8.0",
    "nometa>=0.1.1",
    "lxml>=6.0.0",
    "cryptography>=45.0.0",
    "psutil>=7.0.0",
    "aiofiles>=24.1.0",
]

[project.urls]
rMeta = "https://github.com/KitQuietDev/rMeta"
rMetaCLI = "https://github.com/KitQuietDev/rMetaCLI"

[tool.setuptools.packages.find]
include = ["rmeta_core*"]
